--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ numpy==2.3.1
 soundfile==0.13.1
 sounddevice==0.5.2
 resampy==0.4.3
+
+mypy==1.17.1
+pyright==1.1.403
+flake8==7.3.0
+isort==6.0.1
+black==25.1.0
