--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 PySide6==6.9.1
-numpy==2.3.1
 soundfile==0.13.1
 sounddevice==0.5.2
 resampy==0.4.3
 
+PySide6-stubs==6.7.3.0
 mypy==1.17.1
 pyright==1.1.403
 flake8==7.3.0
